[package]
name = "clap-port-flag"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-clique/clap-port-flag"
documentation = "https://docs.rs/clap-port-flag"
description = "Easily add a --port flag to CLIs using Structopt."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4", features = [ "derive", "env" ] }

[dev-dependencies]
futures = "0.3.24"
hyper = { version = "1.0.1", features = ["server", "http2"] }
tokio = { version = "1.21.0", features = ["macros", "net", "rt-multi-thread"] }

[features]
default = ["fd"]
addr_with_port = []
fd = []
